--- a/templates/data.html
+++ b/templates/data.html
@@ -77,7 +77,6 @@
             {#margin: 30px 0;#}
             display: inline-flex;
             background: #5a728a;
-        {#font-size: 16px;#}
             width: 150px;
             height: 45px;
             color: #ffffff;
@@ -112,7 +111,7 @@
                 justify-content: center;
             }
 </style>
-
+<form method="post" id="tec">
     <div class="box-container">
       <div class="box1-content">
         <h1>Median TEC</h1>
@@ -130,12 +129,13 @@
             well-known technique from ionosonde data processing. As far as NmF2 gives the significant part of TEC then
             TEC variations can be studied and analyzed in the same manner as NmF2 temporal dynamics in ionosonde studies.</p>
       </div>
-      <div class="box1-side">
-          <a href="/date-selection" class="button">
-              ⟶
-          </a>
+{#      <form method="post" id="tec">#}
+        <div class="box1-side">
+            <form method="post" id="tec">
+                <button type="submit" formaction="/date-selection" class="button">⟶</button>
+            </form>
 {#        <button type="submit" formaction="/date-selection" class="button">⟶</button>#}
-      </div>
+        </div>
     </div>
     <div class="box-container">
       <div class="box1-content content">
@@ -147,9 +147,11 @@
             measuring of the amplitude of signals from the 5 VLF transmitters: JXN, GQD, NAA, DHO, ICV. The "Whistler"
             characteristics can be found in the Equipment section</p>
       </div>
-      <div class="box1-side">
-        <button type="submit" formaction="/date-selection" class="button">⟶</button>
-      </div>
+        <div class="box1-side">
+            <form method="post" id="vlf">
+                <button type="submit" formaction="/date-selection" class="button">⟶</button>
+            </form>
+        </div>
     </div>
 
     <script>
@@ -161,5 +163,6 @@
       container.classList.toggle('right-open');
     }));
     </script>
+{#    </form>#}
 
 {% endblock %}
