--- a/templates/vlf_data.html
+++ b/templates/vlf_data.html
@@ -20,11 +20,12 @@
                 float: left;
                 display: inline-block;
                 background: #68819a;
-                font-size: 18px;
+                font-size: 20px;
+                width: 220px;
                 color: white;
                 font-family: 'Roboto', sans-serif;
                 border: #68819a;
-                border-radius: 10px;
+                border-radius: 8px;
             }
 
             .btn:hover {
@@ -45,8 +46,8 @@
                 font-size: 20px;
                 color: #fcfafa;
                 font-family: 'Roboto', sans-serif;
-                width: 130px;
-                border-radius: 5px;
+                width: 140px;
+                border-radius: 8px;
                 border: 1px solid #8e9798;
             }
 
@@ -62,7 +63,7 @@
                 font-size: 20px;
                 color: #fcfafa;
                 font-family: 'Roboto', sans-serif;
-                border-radius: 5px;
+                border-radius: 8px;
                 width: 130px;
                 border: 1px solid #8e9798;
             }
@@ -72,21 +73,32 @@
                 border: 1px solid #7b8283;
             }
         </style>
-        {% if no_data %}
-            <span style="align-items: center;">NO DATA</span>
-        {% else %}
+{#        {% if no_data %}#}
+{#            <span style="align-items: center;">NO DATA</span>#}
+{#        {% else %}#}
 
         <form method="post" id="date_form">
             <div class="container px-4 py-5" id="main-contents">
                 <input class="btn-previous" type="submit" formaction="/get-vlf-data" value="Previous day" onclick="previous()">
                 <input class="btn-next" type="submit" formaction="/get-vlf-data" value="Next day" onclick="next()">
+                <span style="align-items: center; font-size: 25px; justify-content: center; margin: auto; display: flex;" id="nodata">
+                    <br><br>
+                    NO DATA
+                </span>
                 <input type="hidden" id="button_name" name="button_name" value="">
-                <input type="hidden" id="new_day" name="new_day" value="">
-                <input type="hidden" id="new_month" name="new_month" value="">
-                <input type="hidden" id="new_year" name="new_year" value="">
+                <input type="hidden" id="new_day" name="new_day" value="1">
+                <input type="hidden" id="new_month" name="new_month" value="1">
+                <input type="hidden" id="new_year" name="new_year" value="2023">
             </div>
         </form>
             <script>
+
+                if ('{{ no_data }}' === 'True') {
+                    document.getElementById("figures").style.display = 'none';
+                } else {
+                    document.getElementById("nodata").style.display = 'none';
+                }
+
                 currentMonth = '{{ current_month }}';
                 currentYear = '{{ current_year }}';
                 currentDay = '{{ current_day }}';
@@ -126,12 +138,14 @@
             </style>
             <picture>
                 {% for image in images %}
-                    <img class="img1" id="img_{{ image }}" src='{{ image }}' width=100%
-                         style="display: block; align-items: center; justify-content: center; object-position: center;"/>
+                    <div id="figures">
+                        <img class="img1" id="img_{{ image }}" src='{{ image }}' width=100%
+                             style="display: block; align-items: center; justify-content: center; object-position: center;"/>
+                    </div>
                 {% endfor %}
             </picture>
-            </a>
+{#            </a>#}
         {% endif %}
-    {% else %}Ваш запрос завершился с ошибкой.{% endif %}</div>
+{#    {% else %}Ваш запрос завершился с ошибкой.{% endif %}</div>#}
     </body>
 {% endblock %}
