--- a/templates/data.html
+++ b/templates/data.html
@@ -61,8 +61,8 @@
             width: 200px;
             display: flex;
             justify-content: center;
-            {#align-items: center;#}
-            align-items: flex-end;
+            align-items: center;
+            {#align-items: flex-end;#}
             font-family: 'Roboto', sans-serif;
             {#vertical-align: center;#}
           {#color: #1a1d20;#}
@@ -78,23 +78,35 @@
             {#color: white;#}
             {#margin: 30px 0;#}
             display: inline-flex;
-            background: #5a728a;
-            width: 150px;
-            height: 45px;
+            {#background: #5a728a;#}
+            background: #d1d7dc;
+            {#width: 150px;#}
+            {#width: 100%;#}
+            {#height: 100%;#}
+            width: 200px;
+            height: 800px;
+            {#height: 45px;#}
             color: #ffffff;
-            font-size: 18px;
+            font-size: 50px;
             font-family: 'Roboto', sans-serif;
-            border: #68819a;
+            {#border: #68819a;#}
+            border: #d1d7dc;
             border-radius: 8px;
             margin: auto;
+            transition: all 0.2s;
             justify-content: center;
             align-items: center;
             vertical-align: center;
         }
 
         .button:hover {
-           background: #4c6177;
+           {#background: #4c6177;#}
+           {#background: #cdd6de;#}
            color: #f8f6f6;
+            transform: scale(1.1);
+            width: 200px;
+            height: 800px;
+
         }
 
         .img1 {
